# portfolio-ros2-nav-yolo

./: README.md
compose/: docker-compose.yaml
docker/gazebo/: Dockerfile
docker/nav2/: Dockerfile
docker/robot_localization/: Dockerfile
docker/slam_toolbox/: Dockerfile
docker/yolo/: Dockerfile
simulation/config/: ekf.yaml  nav2_params.yaml
simulation/models/mybot/: model.config  mybot.sdf
simulation/models/mybot_cpu/: model.config  mybot.sdf
simulation/worlds/: empty.sdf  imu_only.sdf  imu_world.sdf  with_robot.sdf  with_robot_cpu.sdf  with_robot_local.sdf
src/yolo_ros/: package.xml  setup.py
src/yolo_ros/yolo_ros/: yolo_node.py
